--- a/style.css
+++ b/style.css
@@ -1,11 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
     display: flex;
     flex-direction: column;
+    font-family: 'Roboto', Arial, sans-serif;
+    margin: 0;
+}
+
+.hero {
+    background-color: #1F2937;
+    color: #f9faf8;
+    /*padding: 10px 200px;*/
 }
 
 .header {
-    background-color: #1F2937;
-    color: white;
+    display: flex;
+    justify-content: space-between;
+    font-size: 24px;
+    font-weight: bolder;
+}
+
+ul {
+    display: flex;
+    margin: 0;
+    list-style: none;
+    gap: 20px;
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
 .section-1 {
