--- a/style.css
+++ b/style.css
@@ -36,13 +36,13 @@ ul {
     font-weight: normal;
 }
 
-h1 {
+.hero h1 {
     font-size: 48px;
     font-weight: 900;
     margin: 0;
 }
 
-p {
+.hero p {
     font-size: 18px;
     color: #e5e7eb;
     margin: 0;
