--- a/style.css
+++ b/style.css
@@ -83,6 +83,35 @@ button {
     padding: 40px 0;
 }
 
+.box-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    margin-bottom: 82px;
+}
+
+.box-container {
+    max-width: 200px;
+}
+
+.box {
+    width: 190px;
+    height: 200px;
+    border: 5px;
+    border-style: solid;
+    border-color: #3882f6;
+    border-radius: 12px;
+}
+
+.section-1 p {
+    margin: 0;
+    text-align: center;
+    font-size: 18px;
+    color: #5d646d;
+    margin-top: 10px;
+}
+
 .section-2 {
     background-color: #e5e7eb;
 }
