Finish the HTML and CSS for section 3

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ ul {
     margin: 0;
 }
 
-button {
+.hero button {
     background-color: #3882f6;
     color: #f9faf8;
     font-size: 18px;
@@ -154,6 +154,46 @@ button {
 
 .section-3 {
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.blue-box {
+    background-color: #3882f6;
+    width: 1000px;
+    height: 150px;
+    margin: 100px 0;
+    padding: 0 90px;
+    border-radius: 12px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.call-to-action {
+    color: #f9faf8;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.sign-up {
+    color: #f9faf8;
+    font-size: 18px;
+    font-weight: 100;
+}
+
+.blue-box button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-size: 20px;
+    font-weight: 900;
+    border-color: #f9faf8;
+    border: 2px;
+    border-style: solid;
+    border-radius: 12px;
+    padding: 10px 30px;
 }
 
 .footer {
