--- a/style.css
+++ b/style.css
@@ -198,4 +198,10 @@ ul {
 
 .footer {
     background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #f9faf8;
+    font-size: 18px;
+    padding: 40px 0;
 }
